// Original file: proto/mesh_types.proto

import type { SimpleInt as _spacemesh_v1_SimpleInt, SimpleInt__Output as _spacemesh_v1_SimpleInt__Output } from '../../spacemesh/v1/SimpleInt';

export interface NetIDResponse {
  'netid'?: (_spacemesh_v1_SimpleInt | null);
}

export interface NetIDResponse__Output {
  'netid': (_spacemesh_v1_SimpleInt__Output | null);
}
